--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* margin: 0; */
+  margin: 0;
   height: 100vh;
 }
 
@@ -24,8 +24,22 @@ body{
   grid-gap: 5px;
 }
 div#guess-row {
+  height: auto;
   display: block;
   border: 1px solid white;
   text-align: center;
 }
 
+#keyboard-rows{
+  display: flex;
+  width: 100%;
+  margin: 0 auto 8px;
+}
+
+#keys{
+  margin: 0 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+}
