--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,13 @@ body{
   justify-content: center;
   align-items: center;
   margin: 0;
-  height: 100vh;
+  /* height: 100vh; */
 }
-
+h1 {
+  margin: 12px 0;
+  padding: 12px;
+  text-align: center;
+}
 #guess-board {
   width: 398px;
   height: 498px;
