--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,34 @@
 body{
-  background-color: black;
+  --body-bg: white;
+  --btn-text-color: black;
+  background-color: var(--body-bg);
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0;
-  /* height: 100vh; */
+  margin: 20px;
+  min-height: 100vh;
+  /* min-width: 100vw; */
 }
 
+body.dark {
+  --body-bg: black;
+  --btn-text-color: #eaeaea;
+  --card-text-color: #dedede;
+  --header-bg: #005e9d;
+  --header-text-color: #d8d8d8;
+  --inverted-btn-text-color: #2a2a2a;
+  --light-dark-btn-bg: linear-gradient(to right top, #444655, #595b6b, #6f7181,
+  #868898, #9ea0b0, #acaebe, #bbbccd, #cacbdc, #d2d4e5, #dadced, #e3e5f6, #ebeeff);
+  --light-dark-btn-content: "Light Mode";
+  background-color: var(--body-bg);
+}
+
+
+#light-dark-mode {
+  align-self: flex-end;
+}
 h1 {
   margin: 12px 0;
   padding: 12px;
