--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,13 @@ div#guess-row {
 #keyboard-rows{
   display: flex;
   width: 100%;
-  margin: 0 auto 8px;
-}
-
-#keys{
-  margin: 0 5px;
-  display: flex;
+  margin: 0 5px 8px;
   justify-content: center;
   align-items: center;
+}
+
+.btn{
+  margin: 0 5px;
+  display: flex;
   flex: 1;
 }
