--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ h1 {
   width: 398px;
   height: 498px;
   display: grid;
-  grid-template-rows: repeat(6, 1fr);
+  /* grid-template-rows: repeat(6, 1fr); */
   padding: 10px;
   grid-gap: 10px;
   /* box-sizing: border-box; */
@@ -67,7 +67,7 @@ div#guess-row {
 }
 
 .btn{
-  margin: 0 5px;
+  margin: 0 2px;
   display: flex;
-  flex: 1;
+  /* flex: 1; */
 }
