--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ h1 {
   /* grid-template-rows: repeat(6, 1fr); */
   padding: 10px;
   grid-gap: 10px;
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
 }
 
 #guess-row-container {
@@ -52,10 +52,12 @@ h1 {
 }
 
 div#guess-row {
-  height: auto;
-  display: block;
+  height: 70px;
+  display: flex;
   border: 2px solid white;
   text-align: center;
+  justify-content: center;
+  font-size: 40px;
 }
 
 #keyboard-rows{
