--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
   align-items: center;
   margin: 20px;
   min-height: 100vh;
-  width: 90Vh;
+  min-width: 100vw;
   /* min-width: 100vw; */
 }
 
