--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body{
   justify-content: center;
   align-items: center;
   margin: 20px;
-  min-height: 100vh;
-  width: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 body.dark {
