--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html {
+  width: 100%;
+  min-height: 100%;
+}
 body{
   --body-bg: white;
   --btn-text-color: black;
@@ -8,8 +12,8 @@ body{
   justify-content: center;
   align-items: center;
   margin: 20px;
-  height: 100%;
-  width: 100%;
+  /* height: 100%;
+  width: 100%; */
 }
 
 body.dark {
