--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,3 @@
-html {
-  
-  width: 100%;
-  min-height: 100vh;
-}
-
 /* bones for light and dark mode*/
 body{
   --body-bg: white;
@@ -12,11 +6,11 @@ body{
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
-  margin: 20px;
-  /* height: 100%;
-  width: 100%; */
+  /* margin: 20px; */
+  height: 100vh;
+  width: 100vw;
 }
 
 body.dark {
@@ -26,16 +20,16 @@ body.dark {
   --header-bg: #005e9d;
   --header-text-color: #d8d8d8;
   --inverted-btn-text-color: #2a2a2a;
-  --light-dark-btn-bg: linear-gradient(to right top, #444655, #595b6b, #6f7181,
-  #868898, #9ea0b0, #acaebe, #bbbccd, #cacbdc, #d2d4e5, #dadced, #e3e5f6, #ebeeff);
+  --light-dark-btn-bg: white;
   --light-dark-btn-content: "Light Mode";
   background-color: var(--body-bg);
 }
 
 
-#light-dark-mode {
+/* #light-dark-mode {
   align-self: flex-end;
-}
+} */
+
 h1 {
   margin: 12px 0;
   padding: 12px;
@@ -46,7 +40,6 @@ h1 {
   width: 398px;
   height: 498px;
   display: grid;
-  /* grid-template-rows: repeat(6, 1fr); */
   padding: 10px;
   grid-gap: 10px;
   box-sizing: border-box;
@@ -69,8 +62,8 @@ div#guess-row {
 
 #keyboard-rows{
   display: flex;
-  width: 100%;
   margin: 0 5px 8px;
+  padding: 0 auto;
   justify-content: center;
   align-items: center;
 }
@@ -78,7 +71,6 @@ div#guess-row {
 .btn{
   margin: 0 2px;
   display: flex;
-  /* flex: 1; */
 }
 
 .animate__animated.animate__flipInY {
